Complete-Installation-Guide(K8s)/deployment-sample.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-sample-deployment
  labels:
    app: spring-sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-sample
  template:
    metadata:
      labels:
        app: spring-sample
    spec:
      containers:
      - name: spring-sample
        image: infocareerdemo/blue
        ports:
        - containerPort: 8038
