Complete-Installation-Guide(K8s)/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "nginx"
  rules:
    - host: demo.localhost
      http:
        paths:
          - path: /appdata
            pathType: Prefix
            backend:
              service:
                name: spring-sample-service
                port:
                  number: 8020
